adding to google search console

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="q-hS7EvYlKe6V0IjU8-3GiB0jE1Pq_hvW_mga1Fpfp0" />
   <title>Student Result Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="q-hS7EvYlKe6V0IjU8-3GiB0jE1Pq_hvW_mga1Fpfp0" />
